[ADD] home view UI added

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -169,5 +169,5 @@ input::placeholder {
 body {
   line-height: 1;
   font-family: "Onest", sans-serif;
-  /* overflow: hidden; */
+  background: var(--primary-color);
 }
