--- a/client/src/views/Chat/Chat.css
+++ b/client/src/views/Chat/Chat.css
@@ -5,10 +5,9 @@
   max-height: 100vh;
 }
 
-.chat-user-list {
-  width: 100%;
-  height: 100%;
-  background-color: #1d1e25;
+.chat-user-list::-webkit-scrollbar {
+  width: 0;
+  background: transparent;
 }
 
 .chat-top-container {
