--- a/client/src/views/Chat/Chat.css
+++ b/client/src/views/Chat/Chat.css
@@ -1,4 +1,5 @@
 .chat-container {
+  width: 100%;
   display: grid;
   grid-template-columns: 400px 1fr;
   height: 100vh;
@@ -18,4 +19,14 @@
   width: 100%;
   height: calc(100vh - 60px);
   position: relative;
+}
+
+@media screen and (max-width: 850px) {
+  .chat-container {
+    display: initial;
+  }
+
+  .chat-user-list {
+    display: none;
+  }
 }
