--- a/client/src/views/Form/Form.css
+++ b/client/src/views/Form/Form.css
@@ -1,7 +1,6 @@
 .form-container {
   width: 100%;
   height: 100vh;
-  min-height: 650px;
   background: var(--primary-color);
   display: flex;
   justify-content: center;
@@ -25,6 +24,10 @@
 .form-content-isLoading .form-error-container {
   opacity: 0.5;
   pointer-events: none;
+}
+
+.form-avatar-container {
+  margin-bottom: 3rem;
 }
 
 .form-form {
