--- a/client/src/views/Form/Form.css
+++ b/client/src/views/Form/Form.css
@@ -49,6 +49,18 @@
   margin-bottom: 1rem;
 }
 
+.form-input-global-container {
+  width: 100%;
+  background: var(--primary-color);
+  position: relative;
+  margin-bottom: 1rem;
+}
+
+.form-input-container {
+  position: relative;
+  margin: 0 !important;
+}
+
 .form-form fieldset div:last-child {
   margin-bottom: 0rem;
 }
