feat: responsive chat view (#20)

--- a/client/src/components/InputButton/EmojiButton.css
+++ b/client/src/components/InputButton/EmojiButton.css
@@ -71,3 +71,9 @@
 .epr-preview {
   display: none !important;
 }
+
+@media screen and (max-width: 768px) {
+  .emoji-button-picker-container {
+    transform: translateX(67.5px);
+  }
+}
