--- a/client/src/components/InputMessage/InputMessage.css
+++ b/client/src/components/InputMessage/InputMessage.css
@@ -22,6 +22,7 @@
   color: white;
   background: #292a33;
   height: 50px;
+  padding-right: 3rem;
 }
 
 .form-input::placeholder {
@@ -45,16 +46,39 @@
   align-items: center;
   background-color: var(--CTA-color);
   color: var(--primary-color);
-  padding: 1rem 1.5rem;
+  padding: 1rem;
   border-radius: 4px;
   font-weight: 700;
   opacity: 0.5;
   transition: 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
   position: relative;
   margin-left: 1rem;
+  max-height: 50px;
+}
+
+.input-message-submit-mobile {
+  display: none;
+}
+
+.input-message-submit-mobile svg {
+  height: 17.5px;
+}
+
+.input-message-submit-mobile svg path {
+  fill: var(--primary-color);
 }
 
 .input-message-submit[data-form-validity~="true"] {
   opacity: 1;
   box-shadow: 0px 4px 13px 3px rgba(209, 203, 50, 0.25);
+}
+
+@media screen and (max-width: 768px) {
+  .input-message-submit-desktop {
+    display: none;
+  }
+
+  .input-message-submit-mobile {
+    display: flex;
+  }
 }
