--- a/client/src/components/ChatTop/ChatTop.css
+++ b/client/src/components/ChatTop/ChatTop.css
@@ -1,6 +1,6 @@
 .chatTop-container {
   width: 100%;
-  background-color: #292a33;
+  background: #1b1c24;
   align-items: center;
   padding: 1rem 1.5rem;
   height: 60px;
