--- a/client/src/components/FormSubmitButton/FormSubmitButton.css
+++ b/client/src/components/FormSubmitButton/FormSubmitButton.css
@@ -18,6 +18,10 @@
   box-shadow: 0px 4px 13px 3px rgba(209, 203, 50, 0.25);
 }
 
+.form-submit-btn[data-form-validity~="true"]:hover {
+  background-color: var(--CTA-color-hover);
+}
+
 .form-submit-loader {
   width: 17px;
   height: 17px;
