--- a/client/src/views/Home/Home.css
+++ b/client/src/views/Home/Home.css
@@ -47,55 +47,17 @@
 .home-search-inp-container input {
   width: 100%;
   height: 100%;
-  padding: 1rem 60px 1rem 60px;
+  padding: 1rem;
   border-radius: 4px;
   background: var(--primary-color);
   color: white;
   border: none;
-  background: #1d1e25;
-  font-weight: 600;
+  background: #1b1c24;
+  font-weight: 500;
 }
 
 .home-search-inp-container input::placeholder {
   color: #4f5164;
-}
-
-.home-search-inp-container button {
-  background: #23242d;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 50px;
-  height: 50px;
-  border-radius: 4px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.home-search-inp-container button svg {
-  width: 17.5px;
-  height: 17.5px;
-}
-
-/* Filter btn */
-
-.home-filter-btn-container {
-}
-
-.home-filter-btn-container button {
-  margin: 0 0 0 1rem;
-  height: 100%;
-  padding: 1rem 1.75rem;
-  background: #1d1e25;
-  color: #4f5164;
-  border-radius: 4px;
-  font-weight: 600;
-}
-
-.home-filter-btn-container button:hover {
-  background: var(--CTA-color);
-  color: var(--primary-color);
 }
 
 .home-data-container {
