--- a/client/src/components/HidePassword/HidePassword.css
+++ b/client/src/components/HidePassword/HidePassword.css
@@ -9,12 +9,6 @@
   align-items: center;
 }
 
-.show-password:hover {
-  background: #23242c;
-  border: 1px solid var(--secondary-color);
-  border-left: none;
-}
-
 .show-password svg {
   width: 22.5px;
 }
@@ -23,6 +17,14 @@
   fill: var(--CTA-color);
 }
 
+.show-password:hover svg path {
+  fill: var(--CTA-color-hover);
+}
+
 .show-password[data-password-is-hidden~="false"] svg path {
   fill: var(--secondary-color);
+}
+
+.show-password[data-password-is-hidden~="false"]:hover svg path {
+  fill: #64667c;
 }
